[OS/2] Bug 395576: extension of downloaded files are upper-cased sometimes, r=mkaply